# testqt-loop-in-thread

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
